traefik/04-middleware-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: default
  name: dashboard-auth
spec:
  basicAuth:
      secret: dashboard-users
